--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "lab-4",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "jest",
-    "start": "node index.js"
+    "start": "node src/server.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "express-swagger-generator": "^1.1.17",
-    "redis": "^5.8.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-swagger-generator": "^1.1.17"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
-    "supertest": "^7.1.4"
+    "jest": "^29.6.0",
+    "supertest": "^6.3.3"
   }
 }
